fix(semantic): match structured concept search terms